# audioscope

./: README.md
.github/workflows/: deploy.yml
browser/: README.md  package-lock.json  package.json  webpack.config.js
browser/src/: audio.js  display.js  index.html  index.js  sample-extractor.worklet.js
rust/: Cargo.toml  README.md
rust/src/: audio.rs  config.rs
src/: display.rs  main.rs
