[package]
name = "audioscope"
version = "0.1.0"
authors = ["delu <davidelu93@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
glium = "0.29.1"
portaudio = "0.7.0"
num = "*"
rustfft = "4.0.0"
[patch.crates-io]
num-bigint = { path = "vendor/num-bigint" }

